# DockCheck

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  bumpver.toml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: pypi.yaml
app/: __main__.py  analyzer.py
examples/: Dockerfile.1  Dockerfile.2
